Added: - `print` function to print debug messages to console. - Named argument now uses `@` instead of `:` prefix as the ':' conflicts in some   cases with naming of columns and tables. - Eval construct added to the grammar: `@(expression)` evaluates the expression   and inserts it into the containing expression. - Signature of `translate` and `exec` methods changed to allow them to work   together, as this is required to properly implement the eval construct. - General-purpose language:   - Selector construct added to grammar: `a[b]...` selects member `b` in `a`.   - For-each loop over list, iterables, maps, arrays and results, with binding     for both key and value where applicable. - Show line number where error occurred in ESQL program.